--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -7,6 +7,8 @@
   align-items: center;
 }
 .logo {
+  padding-top: 10px;
+  padding-bottom: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
