--- a/src/partials/customers.html
+++ b/src/partials/customers.html
@@ -1,5 +1,5 @@
 <section class="section customers__bg__img">
-  <div class="container"></div>
+  <div class="container">
   <h2 class="title">What our Customers Say</h2>
   <p class="section__description">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -105,4 +105,5 @@
       </div>
     </li>
   </ul>
+  </div>
 </section>
