--- a/src/sass/layout/_customers.scss
+++ b/src/sass/layout/_customers.scss
@@ -1,26 +1,23 @@
 .section {
   align-items: center;
-  padding: 60px 20px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   margin-left: auto;
   margin-right: auto;
   width: 320px;
 
   @media screen and (min-width: $mobile) {
-    padding: 60px 32px 120px;
-    margin-left: auto;
-    margin-right: auto;
+    padding-top: 60px;
+    padding-bottom: 120px;
     width: 480px;
   }
   @media screen and (min-width: $tablet) {
-    padding: 60px 32px 120px;
-    margin-left: auto;
-    margin-right: auto;
     width: 768px;
+    padding-top: 60px;
+    padding-bottom: 120px;
   }
   @media screen and (min-width: $desktop) {
     padding: 100px 125px 200px 16px;
-    margin-left: auto;
-    margin-right: auto;
     width: 1280px;
   }
 }
@@ -72,6 +69,11 @@
   line-height: calc(33px / 28px);
   color: var(--main-text-color);
   margin-bottom: 20px;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 42px;
+    line-height: calc(49px / 42px);
+  }
 }
 .section__description {
   font-family: var(--main-font);
@@ -79,7 +81,13 @@
   line-height: calc(16px / 14px);
   color: var(--main-text-color);
   margin-bottom: 32px;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 16px;
+    line-height: calc(19px / 16px);
+  }
 }
+
 .customers__list {
   display: flex;
   flex-direction: column;
