--- a/src/sass/layout/_customers.scss
+++ b/src/sass/layout/_customers.scss
@@ -1,9 +1,7 @@
-.section {
+.customers {
   align-items: center;
   padding-top: 60px;
   padding-bottom: 60px;
-  margin-left: auto;
-  margin-right: auto;
   width: 320px;
 
   @media screen and (min-width: $mobile) {
@@ -138,12 +136,12 @@
   margin-top: 28px;
   margin-bottom: 40px;
 }
-.profile {
+.profile__block {
   display: flex;
   flex-direction: row;
   gap: 16px;
 }
-.customers {
+.profile {
   padding-right: 16px;
   border-right: 0.854167px solid #7eb101;
   display: flex;
