--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,41 +1,73 @@
 <!-- Герой -->
 <section class="hero" id="home">
-    <div class="container">
-  
-      <div class="hero__general--top">
-        <div class="hero__info">
-          <h1 class="hero__title--top">Enjoy Your Favorite Food From Anywhere</h1>
-          <p class="hero__title--descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
-            enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
-            diam libero vitae erat.</p>
-          <button class="hero__btn">Order Now</button>
-        </div>
-  
-        <div class="hero__foto--top">
-  
-          <button class="hero__slider--but">
-            <svg  class="hero__vector" >
-              <use  class="hero__vector--color" href="./images/sprite.svg#arrow-left-simple" ></use>
-            </svg>
-          </button>
-  
-                  <picture>
-                    <source srcset="./images/hero/hero1_1200@1x.png 1x, ./images/hero/hero1_1200@2x.png 2x" media="(min-width: 1280px)"/>
-                    <source srcset="./images/hero/hero1_768@1x.png 1x, ./images/hero/hero1_768@2x.png 2x" media="(min-width: 768px)"/>
-                    <img class="hero__foto--size" src="./images/hero/hero1_768@1x.png" alt="Фото блюда"/>
-                  </picture>
-        
-  
-          <button class="hero__slider--but but-r">
-          <svg  class="hero__vector" >
-            <use class="hero__vector--color" href="./images/sprite.svg#arrow-right-simple"></use>
-          </svg>
-          </button>
-  
+  <div class="container hero__general">
+    <!-- <div class="hero__general"> -->
+    <div class="hero__info">
+      <h1 class="hero__title">Enjoy Your Favorite Food From Anywhere</h1>
+      <p class="hero__descript">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+        varius enim in eros elementum tristique. Duis cursus, mi quis viverra
+        ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
+      </p>
+      <button class="hero__btn animate__animated animate__pulse">
+        Order Now
+      </button>
+    </div>
+
+    <div class="hero__swiper">
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">
+          <img
+            srcset="
+              ./images/hero/hero1_768@1x.png   768w,
+              ./images/hero/hero1_1200@1x.png 1280w
+            "
+            sizes="(min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px 100vw"
+            src="./images/hero/hero1_768@1x.png"
+            alt="Описание изображения для всех версий"
+          />
+          <img
+            srcset="
+              ./images/hero/hero1_768@1x.png   768w,
+              ./images/hero/hero2_1200@1x.png 1280w
+            "
+            sizes="(min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px 100vw"
+            src="./images/hero/hero1_768@1x.png"
+            alt="Описание изображения для всех версий"
+          />
+          <img
+            srcset="
+              ./images/hero/hero1_768@1x.png   768w,
+              ./images/hero/hero3_1200@1x.png 1280w
+            "
+            sizes="(min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px 100vw"
+            src="./images/hero/hero1_768@1x.png"
+            alt="Описание изображения для всех версий"
+          />
         </div>
       </div>
-    </div> 
-  
-  
-    
-  </section>  
+      <button
+        class="hero__swiper-button hero-swiper-prev animate__animated animate__pulse"
+      >
+        <svg class="hero__svg">
+          <use
+            class="hero__use"
+            href="./images/sprite.svg#arrow-left-simple"
+          ></use>
+        </svg>
+      </button>
+      <button
+        class="hero__swiper-button hero-swiper-next animate__animated animate__pulse"
+      >
+        <svg class="hero__svg">
+          <use
+            class="hero__use"
+            href="./images/sprite.svg#arrow-right-simple"
+          ></use>
+        </svg>
+      </button>
+    </div>
+    <!-- </div> -->
+  </div>
+</section>
