--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,70 +1,73 @@
 <!-- Герой -->
 <section class="hero" id="home">
-    <div class="container">
-  
-      <div class="hero__general--top">
-        <div class="hero__info">
-          <h1 class="hero__title--top">Enjoy Your Favorite Food From Anywhere</h1>
-          <p class="hero__title--descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
-            enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
-            diam libero vitae erat.</p>
-          <button class="hero__btn" data-modal-open>Order Now</button>
-        </div>
-  
-        <div class="hero__foto--top">
-  
-          <button class="hero__slider--but btn btn-left">
-            <svg  class="hero__vector" >
-              <use  class="hero__vector--color" href="./images/sprite.svg#arrow-left-simple" ></use>
-            </svg>
-          </button>
+  <div class="container hero__general">
+    <!-- <div class="hero__general"> -->
+    <div class="hero__info">
+      <h1 class="hero__title">Enjoy Your Favorite Food From Anywhere</h1>
+      <p class="hero__descript">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+        varius enim in eros elementum tristique. Duis cursus, mi quis viverra
+        ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
+      </p>
+      <button class="hero__btn animate__animated animate__pulse">
+        Order Now
+      </button>
+    </div>
 
-           <!-- Swiper -->
-           <div class="wrap">
-            <div class="carusel">
-                <div class="carusel__container">
-                    <div class="carusel__slide">
-                      <!-- <picture >
-                        <source srcset="./images/hero/big_hiro1@1x.png 1x, ./images/hero/big_hiro1@2x.png 2x" media="(min-width: 1280px)"/>
-                        <source srcset="./images/hero/small_hiro1@1x.png 1x, ./images/hero/small_hiro1@2x.png 2x" media="(min-width: 768px)"/>
-                        <img class="hero__foto--size" src="./images/hero/small_hiro1@1x.png" alt="Фото блюда"/>
-                      </picture>
-                      <picture >
-                        <source srcset="./images/hero/big_hiro2@1x.png 1x, ./images/hero/big_hiro2@2x.png 2x" media="(min-width: 1280px)"/>
-                        <source srcset="./images/hero/small_hiro2@1x.png 1x, ./images/hero/small_hiro2@2x.png 2x" media="(min-width: 768px)"/>
-                        <img class="hero__foto--size" src="./images/hero/small_hiro2@1x.png" alt="Фото блюда"/>
-                      </picture>
-                      <picture >
-                        <source srcset="./images/hero/big_hiro3@1x.png 1x, ./images/hero/big_hiro3@2x.png 2x" media="(min-width: 1280px)"/>
-                        <source srcset="./images/hero/small_hiro3@1x.png 1x, ./images/hero/small_hiro3@2x.png 2x" media="(min-width: 768px)"/>
-                        <img class="hero__foto--size" src="./images/hero/small_hiro3@1x.png" alt="Фото блюда"/>
-                      </picture> -->
-                        <img class="carusel__img" src="./images/hero/big_hiro1@1x.png"  alt="">
-                        <img class="carusel__img" src="./images/hero/big_hiro2@1x.png"  alt="">
-                        <img class="carusel__img" src="./images/hero/big_hiro3@1x.png"  alt="">
-                    </div>    
-                </div>
-              <div class="btnWrap"></div>  
-            </div>
-        </div>
-    
-        <script src="./js/script.js"></script> 
-
-          
-                  
-        
-  
-          <button class="hero__slider--but but-r  btn btn-right">
-          <svg  class="hero__vector" >
-            <use class="hero__vector--color" href="./images/sprite.svg#arrow-right-simple"></use>
-          </svg>
-          </button>
-  
+    <div class="hero__swiper">
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">
+          <img
+            srcset="
+              ./images/hero/small_hero1@1x.png  768w,
+              ./images/hero/big_hero1@1x.png   1280w
+            "
+            sizes="(min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px 100vw"
+            src="./images/hero/small_hero1@1x.png"
+            alt="Описание изображения для всех версий"
+          />
+          <img
+            srcset="
+              ./images/hero/small_hero2@1x.png  768w,
+              ./images/hero/big_hero2@1x.png   1280w
+            "
+            sizes="(min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px 100vw"
+            src="./images/hero/small_hero2@1x.png"
+            alt="Описание изображения для всех версий"
+          />
+          <img
+            srcset="
+              ./images/hero/small_hero3@1x.png  768w,
+              ./images/hero/big_hero3@1x.png   1280w
+            "
+            sizes="(min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px 100vw"
+            src="./images/hero/small_hero3@1x.png"
+            alt="Описание изображения для всех версий"
+          />
         </div>
       </div>
-    </div> 
-
-  
-  
-    
-  </section>  
+      <button
+        class="hero__swiper-button hero-swiper-prev animate__animated animate__pulse"
+      >
+        <svg class="hero__svg">
+          <use
+            class="hero__use"
+            href="./images/sprite.svg#arrow-left-simple"
+          ></use>
+        </svg>
+      </button>
+      <button
+        class="hero__swiper-button hero-swiper-next animate__animated animate__pulse"
+      >
+        <svg class="hero__svg">
+          <use
+            class="hero__use"
+            href="./images/sprite.svg#arrow-right-simple"
+          ></use>
+        </svg>
+      </button>
+    </div>
+    <!-- </div> -->
+  </div>
+</section>
